<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/header"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        android:background="@drawable/header_layer"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/your_app"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/tag_line"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        
    </LinearLayout>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        android:layout_marginBottom="30dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/login_backround"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter">

        <TextView
            android:id="@+id/TextWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorTextPrimaey"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            />
        
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/TextWelcome"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingTop="7dp"
            android:textColor="@color/colorTextHint"
            android:paddingStart="70dp"
            android:textSize="20sp"
            android:paddingEnd="10dp"
            tools:ignore="Autofill,RtlSymmetry" />
        <View
            android:id="@+id/viewDividerForEmail"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"
            android:background="@color/colorTextHint"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="@id/inputEmail"
            app:layout_constraintTop_toTopOf="@id/inputEmail"
            android:src="@drawable/ic_email"
            app:tint="@color/colorTextHint"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForEmail"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/password"
            android:textColor="@color/colorTextHint"
            android:paddingStart="70dp"
            android:textSize="20sp"
            android:paddingEnd="10dp"
            android:paddingTop="7dp"
            tools:ignore="Autofill,RtlSymmetry" />
        <View
            android:id="@+id/viewDividerForPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputPassword"
            android:background="@color/colorTextHint"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="@id/inputPassword"
            app:layout_constraintTop_toTopOf="@id/inputPassword"
            android:src="@drawable/ic_lock"
            app:tint="@color/colorTextHint"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/viewDividerForPassword"
            android:background="@drawable/primary_button_backround"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/TextForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin"
            android:layout_marginTop="25dp"
            android:text="Forget Password?"
            android:gravity="center"
            android:textSize="16sp"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/TextForgetPassword"
            android:layout_marginTop="40dp"
            android:background="@drawable/second_button_backround"
            android:text="@string/create__account"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>